fix(chips-combobox): fixed chips spacing and added stories

--- a/src/less/chips-combobox/chips-combobox.less
+++ b/src/less/chips-combobox/chips-combobox.less
@@ -17,6 +17,9 @@
 }
 
 .chips-combobox__items {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
     list-style: none;
     margin: 0;
     margin-bottom: var(--spacing-100);
